Removed not required flags

--- a/src/controller/BUILD.gn
+++ b/src/controller/BUILD.gn
@@ -118,8 +118,7 @@ static_library("controller") {
   ]
 
   cflags = [ "-Wconversion" ]
-  if (chip_support_webrtc_python_bindings && current_os == "linux" &&
-      (current_cpu == "x64" || current_cpu == "arm64")) {
+  if (chip_support_webrtc_python_bindings) {
     public_deps += [ "${chip_root}/src/controller/webrtc:chip_webrtc" ]
   }
 
