Revert "use stdio log instead of default since it has colours (#37765)"
This change broke the ability to actually select a logging backend on Linux via
the chip_logging_backend configuration variable.

This reverts commit 262d0fce929e72b0c7506998d11d5d84ea6d6aab.

--- a/examples/platform/linux/BUILD.gn
+++ b/examples/platform/linux/BUILD.gn
@@ -132,7 +132,7 @@ source_set("app-main") {
     ":wifi-diagnostics-test-event-trigger",
     "${chip_root}/src/data-model-providers/codegen:instance-header",
     "${chip_root}/src/lib",
-    "${chip_root}/src/platform/logging:stdio",
+    "${chip_root}/src/platform/logging:default",
   ]
   deps = [
     ":ota-test-event-trigger",
