--- a/integrations/cloudbuild/chef_test.yaml
+++ b/integrations/cloudbuild/chef_test.yaml
@@ -28,7 +28,7 @@ steps:
           - PW_ENVIRONMENT_ROOT=/pwenv
       args:
           - >-
-              ./examples/chef/chef.py -br -d rootnode_pump_5f904818cc -t linux --enable_ipv4 &&
+              ./examples/chef/chef.py -b -d rootnode_pump_5f904818cc -t linux &&
               ./scripts/build_python.sh -i out/python_env &&
               scripts/run_in_python_env.sh out/python_env './scripts/tests/run_python_test.py --app examples/chef/linux/out/rootnode_pump_5f904818cc --factory-reset --script ./examples/chef/tests/pump_tests.py --script-args "--dut-node-id 0x20 --discriminator 3840 --passcode 20202021 --commissioning-method on-network"'
       id: PumpTest
