--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -649,16 +649,9 @@ jobs:
             - name: Build linux-x64-python-bindings
               run: >-
                   ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
-                  --target linux-x64-python-bindings
+                  --target linux-x64-python-bindings-${BUILD_VARIANT}
                   build --copy-artifacts-to objdir-clone
-                  && rm -rf out/linux-x64-python-bindings"
-
-            - name: Build linux-x64-python-bindings-webrtc
-              run: >-
-                  ./scripts/run_in_build_env.sh "./scripts/build/build_examples.py
-                  --target linux-x64-python-bindings-webrtc
-                  build --copy-artifacts-to objdir-clone
-                  && rm -rf out/linux-x64-python-bindings-webrtc"
+                  && rm -rf out/linux-x64-python-bindings-${BUILD_VARIANT}"
 
             # TODO: JS admin app app needs variants (probably)
             - name: Build linux-x64-jf-control-app
