--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -129,7 +129,8 @@ not_automated:
     - name: TC_CHIMETestBase.py
       reason: Shared code for the Chime Cluster, not a standalone test.
     - name: TC_WEBRTCPTestBase.py
-      reason: Shared code for the WebRTC Provider Cluster, not a standalone test.
+      reason:
+          Shared code for the WebRTC Provider Cluster, not a standalone test.
     - name: TC_CLCTRL_2_1.py
       reason:
           Closure app on master branch does not support this test script yet.
@@ -145,7 +146,6 @@ not_automated:
     - name: TC_CLDIM_2_1.py
       reason:
           Closure app on master branch does not support this test script yet.
-
 
 # This is a list of slow tests (just arbitrarily picked around 20 seconds)
 # used in some script reporting for "be patient" messages as well as potentially
