--- a/integrations/cloudbuild/chef_test.yaml
+++ b/integrations/cloudbuild/chef_test.yaml
@@ -8,10 +8,6 @@ steps:
               python scripts/checkout_submodules.py --shallow --recursive --platform linux 
       id: Submodules
     - name: "ghcr.io/project-chip/chip-build-vscode:140"
-      # NOTE: silabs boostrap is NOT done with the rest as it requests a conflicting
-      #       jinja2 version (asks for 3.1.3 when constraints.txt asks for 3.0.3)
-      env:
-          - PW_ENVIRONMENT_ROOT=/pwenv
       args:
           - "-c"
           - source ./scripts/bootstrap.sh -p linux
@@ -19,25 +15,18 @@ steps:
       waitFor:
           - Submodules
       entrypoint: /usr/bin/bash
-      volumes:
-          - name: pwenv
-            path: /pwenv
       timeout: 900s
     - name: "ghcr.io/project-chip/chip-build-vscode:140"
-      env:
-          - PW_ENVIRONMENT_ROOT=/pwenv
       args:
           - >-
+              ./scripts/run_in_build_env.sh &&
               ./examples/chef/chef.py -b -d rootnode_pump_5f904818cc -t linux &&
               ./scripts/build_python.sh -i out/python_env &&
               scripts/run_in_python_env.sh out/python_env './scripts/tests/run_python_test.py --app examples/chef/linux/out/rootnode_pump_5f904818cc --factory-reset --script ./examples/chef/tests/pump_tests.py --script-args "--qr-code MT:Y.K90AFN00KA0648G00 --dut-node-id 0x20 --commissioning-method on-network"'
       id: PumpTest
       waitFor:
           - Bootstrap
-      entrypoint: ./scripts/run_in_build_env.sh
-      volumes:
-          - name: pwenv
-            path: /pwenv
+      entrypoint: /usr/bin/bash
 
 logsBucket: matter-build-automation-build-logs
 
