[BLE] Enable BLE porting layer
New features:

- Enable BLEManagerImpl based on wise-sdk's Nimble BLE host.

Changes:

Fixes:

Issues:

- Resolves Senscomm/wise#2826

--- a/src/platform/senscomm/scm1612s/BUILD.gn
+++ b/src/platform/senscomm/scm1612s/BUILD.gn
@@ -27,10 +27,14 @@ static_library("scm1612s") {
   sources = [
     "SystemTimeSupport.cpp",
     "../../SingletonConfigurationManager.cpp",
-    "BLEGattProfile.c",
     "BLEManagerImpl.cpp",
     "BLEManagerImpl.h",
     "BlePlatformConfig.h",
+    "ChipDeviceScanner.h",
+    "ChipDeviceScanner.cpp",
+    "blecent.h",
+    "misc.c",
+    "peer.c",
     "CHIPDevicePlatformConfig.h",
     "CHIPDevicePlatformEvent.h",
     "CHIPMem-Platform.cpp",
@@ -51,7 +55,6 @@ static_library("scm1612s") {
     "SCM1612SConfig.h",
 #    "MdnsError.cpp",
 #    "MdnsError.h",
-    "ScmWiFiEvents.cpp",
     "PlatformManagerImpl.cpp",
     "PlatformManagerImpl.h",
     "SystemPlatformConfig.h",
