--- a/scripts/setup/requirements.build.txt
+++ b/scripts/setup/requirements.build.txt
@@ -5,7 +5,9 @@
 
 # Ideally, core build scripts should depend only on the standard library.
 
-# scripts/build
+# scripts/build, scripts/codegen, py_matter_idl
 click
-click-option-group
+coloredlogs
+jinja2
+lark
 python-path
