Remove WEBRTC 2_3 and 2_4 from CI till the can support stream allocation

--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -131,6 +131,12 @@ not_automated:
     - name: TC_WEBRTCPTestBase.py
       reason:
           Shared code for the WebRTC Provider Cluster, not a standalone test.
+    - name: TC_WEBRTCR_2_3.py
+      reason: 
+          Camera Controller App does not support stream allocation requests
+    - name: TC_WEBRTCR_2_4.py
+      reason: 
+          Camera Controller App does not support stream allocation requests
     - name: TC_CLCTRL_2_1.py
       reason:
           Closure app on master branch does not support this test script yet.
