--- a/src/controller/webrtc/BUILD.gn
+++ b/src/controller/webrtc/BUILD.gn
@@ -23,8 +23,12 @@ import("${chip_root}/build/chip/buildconfig_header.gni")
 
 static_library("chip_webrtc") {
   sources = [
+    "${chip_root}/src/app/clusters/webrtc-transport-requestor-server/webrtc-transport-requestor-server.cpp",
+    "${chip_root}/src/app/clusters/webrtc-transport-requestor-server/webrtc-transport-requestor-server.h",
     "WebRTCClient.cpp",
     "WebRTCClient.h",
+    "WebRTCTransportRequestorManager.cpp",
+    "WebRTCTransportRequestorManager.h",
   ]
 
   include_dirs = [
