--- a/examples/platform/nxp/common/Kconfig
+++ b/examples/platform/nxp/common/Kconfig
@@ -314,8 +314,8 @@ config CHIP_APP_LED_MANAGER_LIGHT_LED_INDEX
 
 config CHIP_APP_LED_MANAGER_STATUS_LED
     int "App Led Status"
-    default 0 if (CHIP_NXP_PLATFORM_K32W1 || CHIP_NXP_PLATFORM_MCXW71) && CHIP_OTA_REQUESTOR
-    default 1
+    default 1 if (CHIP_NXP_PLATFORM_MCXW72 && !NXP_USE_LOW_POWER) || CHIP_NXP_PLATFORM_RW61X
+    default 0
     help
         Enable status LED by setting value to 1, or disable with value 0.
 
