[NXP][cmake][examples][common] Fix APP_QUEUE_TICKS_TO_WAIT too low for low-power applications
The APP_QUEUE_TICKS_TO_WAIT configuration value is dictating how
frequent the main Matter application thread is querying the event
queues. For low-power build configurations this frequency needs to be
low enough in order for the application to be able to reach low-power
states.

Signed-off-by: Marian Chereji <marian.chereji@nxp.com>

--- a/examples/platform/nxp/common/Kconfig
+++ b/examples/platform/nxp/common/Kconfig
@@ -321,7 +321,7 @@ config CHIP_APP_LED_MANAGER_STATUS_LED
 
 config CHIP_APP_QUEUE_TICKS_TO_WAIT
     string "App queue ticks to wait"
-    default "pdMS_TO_TICKS(10)" if CHIP_NXP_PLATFORM_K32W1 || CHIP_NXP_PLATFORM_MCXW71 || CHIP_NXP_PLATFORM_MCXW72
+    default "pdMS_TO_TICKS(10)" if (CHIP_NXP_PLATFORM_MCXW71 || CHIP_NXP_PLATFORM_MCXW72) && !NXP_USE_LOW_POWER
     default "portMAX_DELAY"
     help
         Define app queue ticks to wait.
