Add WebRTC Provider Client to invoke provide-offer and solicit-offer commands - This is need due to the slow processing of python responses by which time the next command for webrtc requestor would fail with NOT_FOUND by the requestor server. - To solve this custom response handling is required from the cpp itself, hence the need for a separate command sender for these commands
Signed-off-by: abhishek.h <abhishek.h@samsung.com>
Signed-off-by: Charles Kim <chulspro.kim@samsung.com>

--- a/src/controller/python/BUILD.gn
+++ b/src/controller/python/BUILD.gn
@@ -250,6 +250,7 @@ chip_python_wheel_action("chip-core") {
       if (chip_support_webrtc_python_bindings) {
         sources += [
           "chip/webrtc/__init__.py",
+          "chip/webrtc/command.py",
           "chip/webrtc/library_handle.py",
           "chip/webrtc/peer_connection.py",
           "chip/webrtc/types.py",
