--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -135,14 +135,17 @@ not_automated:
     - name: TC_CHIMETestBase.py
       reason: Shared code for the Chime Cluster, not a standalone test.
     - name: TC_PAVST_2_1.py
-      reason: Depends on PushAV cluster. Will be enabled once local tests
-          are fully verified.
+      reason:
+          Depends on PushAV cluster. Will be enabled once local tests are fully
+          verified.
     - name: TC_PAVST_2_2.py
-      reason: Depends on PushAV cluster. Will be enabled once local tests
-          are fully verified.
+      reason:
+          Depends on PushAV cluster. Will be enabled once local tests are fully
+          verified.
     - name: TC_PAVST_2_9.py
-      reason: Depends on PushAV cluster. Will be enabled once local tests
-          are fully verified.
+      reason:
+          Depends on PushAV cluster. Will be enabled once local tests are fully
+          verified.
 
 # This is a list of slow tests (just arbitrarily picked around 20 seconds)
 # used in some script reporting for "be patient" messages as well as potentially
