--- a/.github/workflows/mypy-validation.yml
+++ b/.github/workflows/mypy-validation.yml
@@ -59,7 +59,8 @@ jobs:
             src/python_testing/matter_testing_infrastructure/chip/testing/taglist_and_topology_test.py \
             src/python_testing/matter_testing_infrastructure/chip/testing/pics.py \
             src/python_testing/matter_testing_infrastructure/chip/testing/decorators.py \
-            src/python_testing/matter_testing_infrastructure/chip/testing/basic_composition.py"
+            src/python_testing/matter_testing_infrastructure/chip/testing/basic_composition.py \
+            src/python_testing/matter_testing_infrastructure/chip/testing/matter_testing.py"
           
           # Print a reminder about expanding coverage
           echo "⚠️ NOTE: Currently only checking a subset of files. Remember to expand coverage!" 
