--- a/.github/workflows/chef.yaml
+++ b/.github/workflows/chef.yaml
@@ -73,6 +73,46 @@ jobs:
               run: |
                   ./scripts/run_in_build_env.sh "./examples/chef/chef.py --ci_linux"
 
+    chef_dimmablelight_device_test:
+        if: github.actor != 'restyled-io[bot]'
+        timeout-minutes: 60
+        runs-on: ubuntu-latest
+        container:
+            image: ghcr.io/project-chip/chip-build:140
+            options: >-
+                --privileged
+                --sysctl net.ipv6.conf.all.disable_ipv6=0
+                --sysctl net.ipv4.conf.all.forwarding=0
+                --sysctl net.ipv6.conf.all.forwarding=0
+
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+            - name: Checkout submodules & Bootstrap
+              uses: ./.github/actions/checkout-submodules-and-bootstrap
+              with:
+                  platform: linux
+            - name: Try to ensure the directories for core dumping exist and we
+                  can write them.
+              run: |
+                  mkdir /tmp/cores || true
+                  sysctl -w kernel.core_pattern=/tmp/cores/core.%u.%p.%t || true
+                  mkdir objdir-clone || true
+
+            - name: Set up a IPV6 known envionment
+              uses: ./.github/actions/add-ipv6
+
+            - name: Build python env
+              run: scripts/run_in_build_env.sh './scripts/build_python.sh --install_virtual_env out/python_env'
+
+            - name: Build chef app
+              run: ./examples/chef/chef.py -b -d rootnode_dimmablelight_bCwGYSDpoe -t linux
+              
+            - name: Run Tests
+              run: |
+                  mkdir -p out/trace_data
+                  scripts/run_in_python_env.sh out/python_env './scripts/tests/run_python_test.py --app examples/chef/linux/out/rootnode_dimmablelight_bCwGYSDpoe --factory-reset --script ./examples/chef/tests/dimmablelight_test.py --script-args "--commissioning-method on-network --discriminator 3840 --passcode 20202021"'
+
     chef_esp32:
         name: Chef - ESP32 CI Examples
         runs-on: ubuntu-latest
