--- a/.github/workflows/chef.yaml
+++ b/.github/workflows/chef.yaml
@@ -74,6 +74,7 @@ jobs:
                   ./scripts/run_in_build_env.sh "./examples/chef/chef.py --ci_linux"
 
     chef_dimmablelight_device_test:
+        name: Chef - Dimmablelight functional test (Linux)
         if: github.actor != 'restyled-io[bot]'
         timeout-minutes: 60
         runs-on: ubuntu-latest
