Decouple wifi network diagnostics cluster.

--- a/src/app/clusters/wifi-network-diagnostics-server/app_config_dependent_sources.gni
+++ b/src/app/clusters/wifi-network-diagnostics-server/app_config_dependent_sources.gni
@@ -12,7 +12,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 app_config_dependent_sources = [
-  "WiFiDiagnosticsTestEventTriggerHandler.h",
-  "wifi-network-diagnostics-server.cpp",
-  "wifi-network-diagnostics-server.h",
+  "CodegenIntegration.cpp"
 ]
