--- a/src/app/clusters/wifi-network-diagnostics-server/BUILD.gn
+++ b/src/app/clusters/wifi-network-diagnostics-server/BUILD.gn
@@ -11,5 +11,23 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-group("wifi-network-diagnostics-server") {
+import("//build_overrides/build.gni")
+import("//build_overrides/chip.gni")
+
+source_set("wifi-network-diagnostics-server") {
+    sources = [
+     "wifi-network-diagnostics-server.cpp",
+     "wifi-network-diagnostics-server.h",
+     "WiFiDiagnosticsTestEventTriggerHandler.h"
+   ]
+
+   public_deps = [
+     "${chip_root}/src/app:app",
+     "${chip_root}/src/app:test-event-trigger",
+     "${chip_root}/src/app/server-cluster",
+     "${chip_root}/src/lib/core:error",
+     "${chip_root}/src/lib/support",
+     "${chip_root}/zzz_generated/app-common/clusters/WiFiNetworkDiagnostics",
+   ]
+   public_configs = [ "${chip_root}/src:includes" ]
 }
