--- a/integrations/docker/images/base/chip-build/Dockerfile
+++ b/integrations/docker/images/base/chip-build/Dockerfile
@@ -173,7 +173,7 @@ RUN case ${TARGETPLATFORM} in \
     && GLIB_VERSION=$(pkg-config --modversion glib-2.0) \
     && git clone --depth=1 --branch=$GLIB_VERSION https://github.com/GNOME/glib.git \
     && (CFLAGS="-O2 -g -fsanitize=thread" meson glib/build glib -Dtests=false || \
-    { cat /glib/build/meson-logs/meson-log.txt; exit 1 }) \
+    { cat /glib/build/meson-logs/meson-log.txt; exit 1; }) \
     && DESTDIR=../build-image ninja -C glib/build install \
     && mv glib/build-image/usr/local/lib64/lib* $LD_LIBRARY_PATH_TSAN \
     && rm -rf glib \
