--- a/.github/workflows/chef.yaml
+++ b/.github/workflows/chef.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Build Chef CI examples on all platforms
+name: Chef CI
 
 on:
     push:
@@ -30,27 +30,6 @@ env:
     CHIP_NO_LOG_TIMESTAMPS: true
 
 jobs:
-    chef_linux:
-        name: Chef - Linux CI Examples
-        runs-on: ubuntu-latest
-        if: github.actor != 'restyled-io[bot]'
-
-        container:
-            image: ghcr.io/project-chip/chip-build:140
-            options: --user root
-
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-            - name: Checkout submodules & Bootstrap
-              uses: ./.github/actions/checkout-submodules-and-bootstrap
-              with:
-                platform: linux
-            - name: CI Examples Linux
-              shell: bash
-              run: |
-                  ./scripts/run_in_build_env.sh "./examples/chef/chef.py --ci -t linux"
-
     chef_linux_all_devices:
         name: Chef - Linux CI Examples (All chef devices)
         timeout-minutes: 60
@@ -109,7 +88,6 @@ jobs:
             - name: Dimmablelight tests
               run: |
                   ./examples/chef/chef.py -b -d rootnode_dimmablelight_bCwGYSDpoe -t linux
-                  touch /tmp/chef_stdin.txt
                   scripts/run_in_python_env.sh out/python_env './scripts/tests/run_python_test.py --app examples/chef/linux/out/rootnode_dimmablelight_bCwGYSDpoe --factory-reset --script ./examples/chef/tests/dimmablelight_test.py --script-args "--commissioning-method on-network --discriminator 3840 --passcode 20202021" --app-stdin-pipe /tmp/chef_stdin.txt'
 
     chef_esp32:
