add chime to do not run list
Good grief why are you fighing me so hard, CI? Chime tests
aren't even part of 1.4.2. If this continues, I'm going to
delete the lot of you.

--- a/src/python_testing/test_metadata.yaml
+++ b/src/python_testing/test_metadata.yaml
@@ -72,6 +72,8 @@ not_automated:
       reason: Code/Test not being used or not shared code for any other tests
     - name: TestConformanceSupport.py
       reason: Unit test - does not run against an app
+    - name: TC_CHIMETestBase.py
+      reason: Shared code for Chime, not a standalone test
     - name: TestChoiceConformanceSupport.py
       reason: Unit test - does not run against an app
     - name: TC_DEMTestBase.py
