[Realtek] Fix code static check issue

--- a/src/platform/realtek/zephyr/BUILD.gn
+++ b/src/platform/realtek/zephyr/BUILD.gn
@@ -48,6 +48,7 @@ static_library("realtek_zephyr") {
     "KeyValueStoreManagerImpl.h",
     "PlatformManagerImpl.h",
     "SystemPlatformConfig.h",
+    "bee4-mbedtls-config.h",
   ]
 
   deps = [ "${chip_root}/src/platform/logging:headers" ]
