--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -78,6 +78,7 @@ if (chip_build_tests) {
       "${chip_root}/src/transport/retransmit/tests",
       "${chip_root}/src/transport/tests",
       "${chip_root}/src/tracing/esp32_diagnostic_trace/tests",
+      "${chip_root}/src/srp/tests",
     ]
 
     # Skip DNSSD tests for Mbed platform due to flash memory size limitations
