--- a/src/srp/tests/BUILD.gn
+++ b/src/srp/tests/BUILD.gn
@@ -17,7 +17,7 @@ import("//build_overrides/chip.gni")
 import("${chip_root}/build/chip/chip_test_suite.gni")
 
 chip_test_suite("tests") {
-  output_name = "libSrpTests"
+  output_name = "libSRPTests"
 
   test_sources = []
 
