--- a/src/data-model-providers/codedriven/endpoint/tests/BUILD.gn
+++ b/src/data-model-providers/codedriven/endpoint/tests/BUILD.gn
@@ -15,11 +15,11 @@ import("//build_overrides/chip.gni")
 import("${chip_root}/build/chip/chip_test_suite.gni")
 
 chip_test_suite("tests") {
-  output_name = "libEndpointProviderTests"
+  output_name = "libEndpointTests"
 
   test_sources = [
-    "TestEndpointProviderRegistry.cpp",
-    "TestSpanEndpointProvider.cpp",
+    "TestEndpointInterfaceRegistry.cpp",
+    "TestSpanEndpoint.cpp",
   ]
 
   cflags = [ "-Wconversion" ]
