--- a/src/app/tests/suites/certification/PICS.yaml
+++ b/src/app/tests/suites/certification/PICS.yaml
@@ -10319,14 +10319,14 @@ PICS:
     #
     - label:
           "Does the device implement the Commodity Metering Cluster as a server?"
-      id: SEMT.S
+      id: COMMTR.S
 
     # Server attributes
     - label: "Does the device implement the MeteredQuantity attribute?"
-      id: SEMT.S.A0000
+      id: COMMTR.S.A0000
 
     - label: "Does the device implement the MeteredQuantityTimestamp attribute?"
-      id: SEMT.S.A0001
+      id: COMMTR.S.A0001
 
     - label: "Does the device implement the TariffUnit attribute?"
-      id: SEMT.S.A0002
+      id: COMMTR.S.A0002
