--- a/src/app/clusters/thermostat-server/app_config_dependent_sources.gni
+++ b/src/app/clusters/thermostat-server/app_config_dependent_sources.gni
@@ -17,6 +17,10 @@ app_config_dependent_sources = [
   "thermostat-delegate.h",
   "thermostat-server-atomic.cpp",
   "thermostat-server-presets.cpp",
+  "thermostat-server-presets.h",
+  "thermostat-server-suggestions.cpp",
   "thermostat-server.cpp",
   "thermostat-server.h",
+  "ThermostatSuggestionStructWithOwnedMembers.cpp",
+  "ThermostatSuggestionStructWithOwnedMembers.h"
 ]
