Add WebRTC Requestor in camera app to support Camera Initiated Flow - Adds DeviceEventHandler to get secure-session-established and commissioning-complete events - Implements WebRTC Requestor delegate for MVP
Signed-off-by: abhishek.h <abhishek.h@samsung.com>
Signed-off-by: Charles Kim <chulspro.kim@samsung.com>

--- a/examples/camera-app/linux/BUILD.gn
+++ b/examples/camera-app/linux/BUILD.gn
@@ -39,6 +39,7 @@ config("config") {
     "include",
     "include/clusters/chime",
     "include/clusters/webrtc-provider",
+    "include/clusters/webrtc-requestor",
     "include/clusters/camera-avstream-mgmt",
     "include/clusters/camera-avsettingsuserlevel-mgmt",
     "include/media-controller",
@@ -83,6 +84,7 @@ executable("chip-camera-app") {
     "${chip_root}/examples/camera-app/linux/src/clusters/camera-avstream-mgmt/camera-av-stream-manager.cpp",
     "${chip_root}/examples/camera-app/linux/src/clusters/chime/chime-manager.cpp",
     "${chip_root}/examples/camera-app/linux/src/clusters/webrtc-provider/webrtc-provider-manager.cpp",
+    "${chip_root}/examples/camera-app/linux/src/clusters/webrtc-requestor/webrtc-requestor-manager.cpp",
     "${chip_root}/examples/camera-app/linux/src/media-controller/default-media-controller.cpp",
     "${chip_root}/examples/camera-app/linux/src/pushav-clip-recorder.cpp",
     "${chip_root}/examples/camera-app/linux/src/uploader/pushav-uploader.cpp",
